--- a/detonaralph/assets/css/estilo.css
+++ b/detonaralph/assets/css/estilo.css
@@ -1,25 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
  font-size:30px;
- color:black;
+ background-image: url('../img/bck-layout.png');
  background-color: #efefF0;
 }
 
 .container{
     display: flex;
-<<<<<<< HEAD
     flex-direction: column;
     width: 100%;
     height: auto;
-=======
-    width: 100%;
-    height: 800px;
->>>>>>> a3abb9c66d5ebc1f417cbaed044b3356290fab22
     align-items: center;
     justify-content: center;
     border: 2px solid white;
 }
 
-<<<<<<< HEAD
 header{
     width: 600px;
     height: 175px;
@@ -60,31 +59,26 @@ main{
 
 
 #centro{
-=======
-#velha{
+    display: flex;
+    flex-wrap: wrap;
     margin:0 auto;
->>>>>>> a3abb9c66d5ebc1f417cbaed044b3356290fab22
     width: 606px;
     height: 606px;
+    justify-content: space-around;
+    background-image: url('../img/bck-buttons.png');
 }
 
-<<<<<<< HEAD
 #dv1,#dv2,#dv3,#dv4,#dv5,#dv6,#dv7,#dv8,#dv9{    
-    width: 32%;
-    height: 32%;
-    background-color: white;
-    float:left;
+    width: 30%;
+    height: 30%;
+    /* float:left; */
     cursor: pointer;
-    margin: 2px;
-    border: 1px solid white;
+    margin: 4px;
+    /* border: 1px solid white; */
 
     border-radius: 10px;
-=======
+    background-image: url('../img/ralphinativo.png');
 
-#topo{
-    background-image: url("../img/toponovo.png");
-    width: 606px;
-    height: 117px;
 }
 
 #corpo{
@@ -93,52 +87,22 @@ main{
     height: 356px;
 }
 
-
-#latesq{
-    float:left;
-    background-image: url("../img/latesq.png");
-    width: 98px;
-    height: 356px;
-}
-
-#centro{
-    float:left;
-    background-image: url("../img/centro.png");
-    width: 406px;
-    height: 351px;
-}
-
-#latdir{
-    float:left;
-    background-image: url("../img/latdir.png");
-    width: 98px;
-    height: 356px;
-}
-
 #dv1,#dv2,#dv3,#dv4,#dv5,#dv6,#dv7,#dv8,#dv9{    
-    width: 91px;
-    height: 91px;
-    background-color: white;
+    width: 32%;
+    height: 32%;
     float:left;
-    font-size: 90px;
-    color: blue;
-    text-align: center;
     cursor: pointer;
-    padding: 5px;
-    margin-left: 27px;
-    margin-top: 12px
->>>>>>> a3abb9c66d5ebc1f417cbaed044b3356290fab22
+    margin: 2px;
+
+    border-radius: 10px;
 }
 
 #dv1:hover,#dv2:hover{
    background-color: yellow;
 }
 
-<<<<<<< HEAD
+
 footer{
-=======
-#rodape{
->>>>>>> a3abb9c66d5ebc1f417cbaed044b3356290fab22
     background-image: url("../img/rodape.png");
     width: 606px;
     height: 117px;
