feat: logo social medias

--- a/detonaralph/assets/css/estilo.css
+++ b/detonaralph/assets/css/estilo.css
@@ -6,7 +6,7 @@
 
 body {
     font-size: 30px;
-    background-image: url('../img/bck-layout.png');
+    background-image: url('../img/fundo.png');
     font-weight: 700;
 }
 
