--- a/piano/assets/css/estilo.css
+++ b/piano/assets/css/estilo.css
@@ -21,32 +21,110 @@ body {
 
 header {
     display: flex;
-    width: 600px;
-    height: 175px;
+    width: 480px;
+    height: 40px;
     border: 10px; 
+    border-radius: 10px 10px 0 0;
+    background-image: url('../img/bck-black.png');
 }
 
 .brand {
-    width: inherit;
-    height: 100px;
+    width: 120px;
+    height: auto;
+}
+
+.brand img {
+    width: 100px;
+    height: auto;
+    margin-left: 10px;
 }
 
 .volume {
-    width: 250px;
-    height: 100px;
-    background-image: url('../img/bck-buttons.png');
+    display: flex;
+    width: 260px;
+    height: inherit;
+    justify-content: center;
+    align-items: center;
 }
 
 .teclas {
-    width: 100px;
-    height: 100px;
-    background-image: url('../img/bck-buttons.png');
+    display: flex;
+    width: 180px;
+    height: inherit;
+    justify-content: center;
+    align-items: center;
 }
 
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
 main {
-    width: 606px;
-    height: 610px;
-    border-radius: 10px;
+    width: 480px;
+    height: auto;
+    padding-top: 10px;
+    border-radius: 0 0 10px 10px;
+    margin-bottom: 10px;
+    background-image: url('../img/bck-black.png');
 }
 
 
@@ -81,7 +159,6 @@ main {
 .maiorkey{
     width: inherit;
     position: relative;
-    /* float: left; */
 }
 
 #maiorkeyc,
