--- a/piano/assets/css/estilo.css
+++ b/piano/assets/css/estilo.css
@@ -10,6 +10,26 @@ body {
     font-weight: 700;
 }
 
+span{
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+aside{
+    display: flex;
+    width: 50px;
+    height:auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-right: 5px;
+
+}
+
+aside img{
+   width: 27px; 
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -21,7 +41,7 @@ body {
 
 header {
     display: flex;
-    width: 480px;
+    width: 490px;
     height: 40px;
     border: 10px; 
     border-radius: 10px 10px 0 0;
@@ -119,7 +139,8 @@ header {
   }
 
 main {
-    width: 480px;
+    display: flex;
+    width: 490px;
     height: auto;
     padding-top: 10px;
     border-radius: 0 0 10px 10px;
@@ -169,12 +190,11 @@ main {
 {
     position: absolute;
     top: 0;
-    left: 40px;
-    width: 40px;
+    left:   40px;
+    width:  40px;
     height: 160px;
     margin: 0;
     cursor: pointer;
-    /* border: solid 2px black; */
     border-radius: 0 0 10px 10px;
     background-image: url('../img/bck-black.png');
 }
