--- a/piano/assets/css/estilo.css
+++ b/piano/assets/css/estilo.css
@@ -15,6 +15,26 @@ span{
     margin-right: 5px;
 }
 
+.notalabel{
+  font-size: x-large;
+  font-weight: 700;
+  display: flex;
+  position: relative;
+  left: 10px;
+  top: 180px;
+  padding: 10px;
+}
+
+.maiorlabel{
+  font-size: medium;
+  font-weight: 700;
+  display: flex;
+  position: relative;
+  left: 5px;
+  top: 125px;
+  padding: 3px;
+}
+
 aside{
     display: flex;
     width: 50px;
