--- a/yudiooh/assets/css/estilo.css
+++ b/yudiooh/assets/css/estilo.css
@@ -24,44 +24,44 @@ header {
     display: flex;
     width: 1240px;
     height: 80px;
-    border: 1px solid white; 
+    background-image: url('../img/bck-black.png');
 }
 
 .brand {
     width: inherit;
     height: 80px;
+    padding: 10px;
 }
 
 .title {
     display: flex;
     width: 880px;
-    height: 80px;
-    background-image: url('../img/bck-buttons.png');
+    height: 80px;    
 }
 
 main {
     display: flex;
     width: 1240px;
-    height: 610px;
+    height: 800px;
     border-radius: 10px;
-    border: 1px solid white;
 }
 
 aside{
     width: 180px;
-    height: 606px;
+    height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid white;
 }
 
-.player1{
+.player1,
+.card-info{
     background-image: url('../rpg/fundop1.png');
 }
 
-.player2{
+.player2,
+.card-info1{
     background-image: url('../rpg/fundop2.png');
 }
 
@@ -99,8 +99,8 @@ aside{
 #p2card4,
 #p2card5
 {
-    width: 90px;
-    height: 30%;
+    width: 100px;
+    height: 130px;
     cursor: pointer;
     margin: 2px;
     border-radius: 10px;
@@ -168,9 +168,29 @@ aside{
     background-image: url('../img/bck-layout.png');
 }   
 
-.card-info{
+.card-info,
+.card-info1{
+    display: flex;
+    flex-direction: column;
     width: 48%;
-    height: 210px;
+    height: 400px;
+    padding: 10px;
+    border-radius: 10px 10px 10px 10px;
+}
+
+.card-info-descricao{
+    width: 100%;
+    height: 230px;
+    border: 2px solid #3d6c90;
+    padding: 10px;
+    border-radius: 10px 10px 10px 10px;
+    margin-bottom: 10px;
+    background-image: url('../../assets/img/bck-layout.png');
+}
+
+.card-info-placar{
+    width: 100%;
+    height: 150px;
     border: 2px solid #3d6c90;
     padding: 10px;
     border-radius: 10px 10px 10px 10px;
@@ -187,7 +207,6 @@ footer {
     width: 1240px;
     height: 80px;
     border-radius: 10px;
-    border: 2px solid #1ce09c;
 }
 
 footer img{
