--- a/yudiooh/assets/css/estilo.css
+++ b/yudiooh/assets/css/estilo.css
@@ -60,9 +60,16 @@ aside{
     background-image: url('../rpg/fundop1.png');
 }
 
+
+
 .player2,
 .card-info1{
     background-image: url('../rpg/fundop2.png');
+}
+
+.player1,
+.player2{
+    background-image: url('../../assets/img/bck-cards.png');
 }
 
 .centro {
@@ -104,26 +111,18 @@ aside{
     cursor: pointer;
     margin: 2px;
     border-radius: 10px;
-    border: 2px solid white;
-    background-image: url('../icons/card-back.png');
+    background-image: url('../icons/cardgreen.png');
     background-repeat: no-repeat;
     background-size: 100%;
 }
 
-#p1card1,
-#p1card2,
-#p1card3,
-#p1card4,
-#p1card5{
-    border-color: aqua;
-}
 
 #p2card1,
 #p2card2,
 #p2card3,
 #p2card4,
 #p2card5{
-    border-color: coral; 
+    background-image: url('../icons/cardblue.png');
 }
 
 .board{
@@ -143,7 +142,6 @@ aside{
     padding: 3px;
     margin: 2px;
     border-radius: 10px;
-    border: 2px solid white; 
     background-image: url('../icons/dragon.png');
     background-position: center;
 }
@@ -180,8 +178,12 @@ aside{
 
 .card-info-descricao{
     width: 100%;
-    height: 230px;
-    border: 2px solid #3d6c90;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 275px;
+    text-align: center;
+    /* border: 2px solid #3d6c90; */
     padding: 10px;
     border-radius: 10px 10px 10px 10px;
     margin-bottom: 10px;
@@ -189,12 +191,23 @@ aside{
 }
 
 .card-info-placar{
+    display: flex;
     width: 100%;
-    height: 150px;
-    border: 2px solid #3d6c90;
+    height: 100px;
     padding: 10px;
     border-radius: 10px 10px 10px 10px;
     background-image: url('../../assets/img/bck-cards.png');
+}
+
+.card-info-descricao-title h3,
+.card-info-descricao-option h3
+{
+    font-size: 14px;
+}
+
+.card-info-descricao-card img{
+    width: 80%;
+    height: auto;
 }
 
 
@@ -215,7 +228,10 @@ footer img{
 
 .placarp1,
 .placarp2{
-    width: 100px;
-    height: inherit;
-    border: 1px solid white;
+    width: 50%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
